nemnogo pravok v logike